# IZ1

./: .gitignore  CMakeLists.txt  DB.cpp  Functions.h  Header.h  main.c  source.c  tests.cpp
V3/: DB.cpp  DB.h
dz2/: CMakeLists.txt  main.c
dz2/dir/include/: mylib.h
dz2/dir/src/: source.c
dz2/dir/tests/: CMakeLists.txt
dz2/dir/tests/src/: test_lib.cpp
dz2v2/: .travis.yml  CMakeLists.txt  main.c
dz2v2/dir/include/: mylib2.h
dz2v2/dir/tests/: CMakeLists.txt
dz2v2/dir/tests/src/: test_lib.cpp
dz2v2/gtest/googletest/cmake/: internal_utils.cmake
test/: Header.h  Test1.cpp  test.cpp  test.vcxproj  test.vcxproj.filters  БАЗА ДАННЫХ НА SQL ТЕСТОВАЯ.txt
test/x64/Release/: test.exe.recipe  test.iobj  test.ipdb
test/x64/Release/test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test.lastbuildstate
